Mobile alignment fix

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -59,7 +59,7 @@
     }
     #profile {
       height: 83vh;
-      margin-bottom: 0;
+      margin-top: 75px;
     }
     article {
       font-size: 1rem;
